NEW: Prooftree package and custom macros

--- a/main.tex
+++ b/main.tex
@@ -3,6 +3,9 @@
 \usepackage{summary}
 \usepackage{math}
 
+\usepackage{prooftree}
+\usepackage{prooftree_macro}
+
 \begin{document}
 
     \lhead{Spring 2020}
