--- a/main.tex
+++ b/main.tex
@@ -8,11 +8,11 @@
 
 \begin{document}
 
-    \lhead{Spring 2020}
-    \chead{Formal Methods and Functional Programming}
-    \rhead{\today}
+    \lhead{FMFP}
+    \rhead{\leftmark}
 
     \title{Formal Methods and Functional Programming}
+    \subtitle{Spring 2021}
     \author{Jean-Claude Graf}
     \maketitle
 
