NEW: Start section case studies
second example is still missing

--- a/main.tex
+++ b/main.tex
@@ -25,4 +25,5 @@
     \include{./06_Types.tex}
     \include{./07_AlgebraicDataTypes.tex}
     \include{./08_LazyEvaluation.tex}
+    \include{./09_CaseStudies.tex}
 \end{document}
