NEW: Introduction and imp of second part

--- a/main.tex
+++ b/main.tex
@@ -17,6 +17,7 @@
     \maketitle
 
     \tableofcontents
+    \part{Functional Programming}
     \include{./01_Introduction.tex}
     \include{./02_NaturalDeduction.tex}
     \include{./03_Correctness.tex}
@@ -26,4 +27,7 @@
     \include{./07_AlgebraicDataTypes.tex}
     \include{./08_LazyEvaluation.tex}
     \include{./09_CaseStudies.tex}
+    \part{Formal Methods}
+    \include{./10_Introduction.tex}
+    \include{./11_Imp.tex}
 \end{document}
