--- a/math.sty
+++ b/math.sty
@@ -4,6 +4,8 @@
 \newcommand{\bs}{\boldsymbol}
 % Shortcut to write caligraphic math symbols
 \newcommand{\mc}{\mathcal}
+\newcommand{\ub}{\underline}
+\newcommand{\ob}{\overline}
 % norm
 \newcommand{\norm}[1]{\left| \!\:\! \left| #1 \right| \!\:\! \right|}
 
