NEW: Model checking section

--- a/main.tex
+++ b/main.tex
@@ -32,4 +32,5 @@
     \include{./11_Imp.tex}
     \include{./12_OperationalSemantics.tex}
     \include{./13_AxiomaticSemantics.tex}
+    \include{./14_ModelChecking.tex}
 \end{document}
