FIX: Typo in Boolean expression of imp

--- a/11_Imp.tex
+++ b/11_Imp.tex
@@ -185,9 +185,9 @@ Stm = 'skip'
                     \item Maps boolean expression $b$ and state $\sigma$ to a truth value $\mc{B}[[b]]\sigma$
                     \item
                         \[
-                            \mc{B}[[e_1 \text{ Rop } e_2]] \sigma =
+                            \mc{B}[[e_1 \text{ op } e_2]] \sigma =
 \begin{cases}
-    \text{tt} &\text{if } \mc{B}[[e_1]] \sigma \ \overline{\text{Rop}} \ \mc{B}[[e_2]] \sigma\\
+    \text{tt} &\text{if } \mc{A}[[e_1]] \sigma \ \overline{\text{op}} \ \mc{A}[[e_2]] \sigma\\
     \text{ff} &\text{otherwise}
 \end{cases}\quad ,\text{where op} \in \text{Rop}
                         \]
