IMPROVE: axiomatic semantics proof section

--- a/13_AxiomaticSemantics.tex
+++ b/13_AxiomaticSemantics.tex
@@ -78,11 +78,28 @@
                         \end{itemize}
                     \ides{Proof}
                         \begin{itemize}
-                            \item Derivation trees tend to get very larege
-                            \item We write assertions before and after each statement
-                            \item We write rule instances vertically
-                            \item Proof outlines are often best developed bottom-up
+                            \item Two main methods
+                                \begin{itemize}
+                                    \ides{Proof Trees:}
+                                        \begin{itemize}
+                                            \item Write as derivation trees
+                                                \icon Tend to get very long
+                                            \item Start from the bottom (/end)
+                                        \end{itemize}
+                                    \ides{Proof Outlines:}
+                                        \begin{itemize}
+                                            \item Write proof vertically
+                                            \item Not a proof since there is no unique interpretation
+                                                \begin{itemize}
+                                                    \item But most of the time it is ok since we want to show that there exists a derivation tree
+                                                \end{itemize}
+                                        \end{itemize}
+                                \end{itemize}
                             \item Loop-invariant is determined by looking how the value changes in consecutive iterations
+                                \begin{itemize}
+                                    \item Could use a table with iteration $0, 1, 2, i, N-1$ on the $x$-axis and the variables we care about on the $y$-axis
+                                    \item Loop invariant is often very similar to the post condition we have
+                                \end{itemize}
                         \end{itemize}
                 \end{itemize}
         \end{itemize}
