--- a/02.tex
+++ b/02.tex
@@ -7,7 +7,7 @@
         \begin{itemize}
             \item Falls $\Sigma$ endlich/abzählbar dann ist Wertebereich $W(X)$ auch endlich
         \end{itemize}
-    \ides{Verteilungsfunktion (VF)} von $x$: $f_X : \R \to [0,1]$
+    \ides{Verteilungsfunktion (VF)} von $x$: $F_X : \R \to [0,1]$
         \begin{itemize}
             \item $F_X(t) := P[X \le t] := P[\{\omega \mid X(\omega) \le t\}]$
         \end{itemize}
