--- a/math.sty
+++ b/math.sty
@@ -4,6 +4,8 @@
 \newcommand{\bs}{\boldsymbol}
 % Shortcut to write caligraphic math symbols
 \newcommand{\mc}{\mathcal}
+\newcommand{\ub}{\underline}
+\newcommand{\ob}{\overline}
 % norm
 \newcommand{\norm}[1]{\left| \!\:\! \left| #1 \right| \!\:\! \right|}
 
@@ -22,6 +24,7 @@
 \newcommand{\mx}{\mathop{\mathrm{max}}}
 \newcommand{\bigcupdot}{\bigcup \hspace{-0.35cm} \cdot}
 
+\newcommand{\notimplies}{\;\not\!\!\!\implies}
 
 % stuff for integrals
 \newcommand{\intl}{\int\limits}
